restructure project, only move files, imports need to be fixed

--- a/src/plot2data_pipeline.ipynb
+++ b/src/plot2data_pipeline.ipynb
@@ -3322,7 +3322,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv11",
    "language": "python",
    "name": "python3"
   },
