--- a/src/plot2data/notebooks_dev/pipeline.ipynb
+++ b/src/plot2data/notebooks_dev/pipeline.ipynb
@@ -18,24 +18,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plot2data.core.hough_transform import temp_func"
+    "from plot2data.setup_logger import logger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lol kek\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "temp_func()"
+    "from plot2data.core.template_match import read_image_rgb, read_image_gray, template_match, \\\n",
+    "    detect_points, find_tolerance_limit, simplify_points, point_to_bbox, \\\n",
+    "    agglomerative_clustering, meanshift_clustering, \\\n",
+    "    replace_black_pixels, invert_convolution_map\n",
+    "\n",
+    "# from plot2data.core.process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
+    "#     crop_image, frame_image, is_grayscale, reconstruct_template_mask\n",
+    "\n",
+    "# from plot2data.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator, \\\n",
+    "#     normalize_map, get_first_N_maximums\n",
+    "\n",
+    "# from plot2data.utils.conv_map_operations import remove_nan_inf"
    ]
   },
   {
@@ -45,22 +48,22 @@
    "outputs": [],
    "source": [
     "\n",
-    "from template_match import read_image_rgb, read_image_gray, template_match, \\\n",
-    "    detect_points, find_tolerance_limit, simplify_points, point_to_bbox, agglomerative_clustering, meanshift_clustering, \\\n",
-    "    replace_black_pixels, invert_convolution_map\n",
+    "# from template_match import read_image_rgb, read_image_gray, template_match, \\\n",
+    "#     detect_points, find_tolerance_limit, simplify_points, point_to_bbox, agglomerative_clustering, meanshift_clustering, \\\n",
+    "#     replace_black_pixels, invert_convolution_map\n",
     "\n",
-    "from process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
-    "    crop_image, frame_image, is_grayscale, reconstruct_template_mask\n",
+    "# from process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
+    "#     crop_image, frame_image, is_grayscale, reconstruct_template_mask\n",
     "\n",
-    "from hough_transform import calc_gradients, build_hough_model, fill_accumulator, \\\n",
-    "    normalize_map, get_first_N_maximums\n",
+    "# from hough_transform import calc_gradients, build_hough_model, fill_accumulator, \\\n",
+    "#     normalize_map, get_first_N_maximums\n",
     "\n",
-    "from utils import remove_nan_inf"
+    "# from utils import remove_nan_inf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,52 +86,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_image(image: np.ndarray) -> None:\n",
-    "    plt.imshow(cv.cvtColor(image, cv.COLOR_BGR2RGB))\n",
-    "\n",
-    "\n",
-    "def draw_points_on_canvas(points: np.ndarray, image: np.ndarray) -> None:\n",
-    "    x = points[:, 0]\n",
-    "    y = points[:, 1]\n",
-    "    \n",
-    "    clear_canvas = image.copy()\n",
-    "    clear_canvas[:, :] = 255\n",
-    "    plt.scatter(x, y, alpha=0.5, s=20)\n",
-    "    plt.imshow(cv.cvtColor(clear_canvas, cv.COLOR_BGR2RGB))\n",
-    "\n",
-    "def draw_points_on_image(\n",
-    "        points: np.ndarray, image: np.ndarray, w: int, h: int,\n",
-    "        markersize=20, alpha=0.5, color=\"C0\"\n",
-    ") -> None:\n",
-    "    x = np.copy(points[:, 0])\n",
-    "    y = np.copy(points[:, 1])\n",
-    "    x += w // 2 - 1\n",
-    "    y += h // 2 - 1\n",
-    "    plt.scatter(x, y, alpha=alpha, s=markersize, color=color)\n",
-    "    plt.imshow(cv.cvtColor(image, cv.COLOR_BGR2RGB))\n",
-    "\n",
-    "\n",
-    "from matplotlib.patches import Rectangle\n",
-    "\n",
-    "def draw_bbox(x_min, x_max, y_min, y_max, bbox_center=None) -> None:\n",
-    "    height = y_max - y_min\n",
-    "    width = x_max - x_min\n",
-    "    rect = Rectangle((x_min, y_min), width, height, edgecolor='r', facecolor='none')\n",
-    "    ax = plt.gca()\n",
-    "    ax.add_patch(rect)\n",
-    "\n",
-    "    if bbox_center:\n",
-    "        bbox_center_x, bbox_center_y = bbox_center\n",
-    "        plt.scatter([bbox_center_x], [bbox_center_y], marker=\"*\")"
+    "from plot2data.utils.drawing import draw_image, draw_points_on_canvas, \\\n",
+    "    draw_points_on_image, draw_bbox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def draw_image(image: np.ndarray) -> None:\n",
+    "#     plt.imshow(cv.cvtColor(image, cv.COLOR_BGR2RGB))\n",
+    "\n",
+    "\n",
+    "# def draw_points_on_canvas(points: np.ndarray, image: np.ndarray) -> None:\n",
+    "#     x = points[:, 0]\n",
+    "#     y = points[:, 1]\n",
+    "    \n",
+    "#     clear_canvas = image.copy()\n",
+    "#     clear_canvas[:, :] = 255\n",
+    "#     plt.scatter(x, y, alpha=0.5, s=20)\n",
+    "#     plt.imshow(cv.cvtColor(clear_canvas, cv.COLOR_BGR2RGB))\n",
+    "\n",
+    "# def draw_points_on_image(\n",
+    "#         points: np.ndarray, image: np.ndarray, w: int, h: int,\n",
+    "#         markersize=20, alpha=0.5, color=\"C0\"\n",
+    "# ) -> None:\n",
+    "#     x = np.copy(points[:, 0])\n",
+    "#     y = np.copy(points[:, 1])\n",
+    "#     x += w // 2 - 1\n",
+    "#     y += h // 2 - 1\n",
+    "#     plt.scatter(x, y, alpha=alpha, s=markersize, color=color)\n",
+    "#     plt.imshow(cv.cvtColor(image, cv.COLOR_BGR2RGB))\n",
+    "\n",
+    "\n",
+    "# from matplotlib.patches import Rectangle\n",
+    "\n",
+    "# def draw_bbox(x_min, x_max, y_min, y_max, bbox_center=None) -> None:\n",
+    "#     height = y_max - y_min\n",
+    "#     width = x_max - x_min\n",
+    "#     rect = Rectangle((x_min, y_min), width, height, edgecolor='r', facecolor='none')\n",
+    "#     ax = plt.gca()\n",
+    "#     ax.add_patch(rect)\n",
+    "\n",
+    "#     if bbox_center:\n",
+    "#         bbox_center_x, bbox_center_y = bbox_center\n",
+    "#         plt.scatter([bbox_center_x], [bbox_center_y], marker=\"*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +152,11 @@
     "import cv2 as cv\n",
     "from sklearn.cluster import AgglomerativeClustering\n",
     "from dotenv import load_dotenv\n",
-    "from setup_logger import logger\n",
     "\n",
     "\n",
-    "BASE_DIR = pathlib.Path(__name__).resolve().parent.parent\n",
+    "BASE_DIR = pathlib.Path(__name__).resolve().parent.parent.parent.parent\n",
     "load_dotenv(BASE_DIR / '.env')\n",
-    "DATA_PATH = pathlib.Path(os.getenv(\"DATA_PATH\"))\n",
-    "\n",
-    "# DESKTOP_PATH = pathlib.Path(os.getenv(\"DESKTOP_PATH\"))"
+    "DATA_PATH = pathlib.Path(os.getenv(\"DATA_PATH\"))"
    ]
   },
   {
