--- a/src/plot2data/notebooks_dev/pipeline.ipynb
+++ b/src/plot2data/notebooks_dev/pipeline.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,32 +80,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plot2data.core.template_match import read_image_rgb, read_image_gray, template_match, \\\n",
-    "    detect_points, find_tolerance_limit, simplify_points, point_to_bbox, \\\n",
-    "    agglomerative_clustering, meanshift_clustering, \\\n",
-    "    replace_black_pixels, invert_convolution_map\n",
-    "\n",
-    "from plot2data.core.process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
-    "    crop_image, frame_image, is_grayscale, reconstruct_template_mask\n",
-    "\n",
-    "from plot2data.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator, \\\n",
-    "    normalize_map, get_first_N_maximums"
+    "from plot2data.utils.read_image import read_image_rgb, read_image_gray\n",
+    "from plot2data.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image, \\\n",
+    "    draw_bbox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plot2data.utils.conv_map_operations import remove_nan_inf\n",
-    "from plot2data.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image, \\\n",
-    "    draw_bbox"
+    "from plot2data.core.template_match import template_match, detect_points, \\\n",
+    "    find_tolerance_limit, point_to_bbox\n",
+    "\n",
+    "from plot2data.core.clustering import simplify_points, agglomerative_clustering, meanshift_clustering\n",
+    "\n",
+    "from plot2data.core.preprocess import replace_black_pixels\n",
+    "\n",
+    "from plot2data.core.conv_map_operations import invert_convolution_map, normalize_map, \\\n",
+    "    get_first_N_maximums\n",
+    "\n",
+    "\n",
+    "from plot2data.core.process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
+    "    crop_image, frame_image, is_grayscale, reconstruct_template_mask\n",
+    "\n",
+    "from plot2data.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -116,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +205,7 @@
        "([], [])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -224,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG - template_match.py - replace_black_pixels: Number of black pixels on image: 0\n",
-      "DEBUG - template_match.py - replace_black_pixels: Number of black pixels on image: 0\n"
+      "DEBUG - preprocess.py - replace_black_pixels: Number of black pixels on image: 0\n",
+      "DEBUG - preprocess.py - replace_black_pixels: Number of black pixels on image: 0\n"
      ]
     }
    ],
@@ -291,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +384,7 @@
        "([], [])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -421,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -492,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -537,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,13 +666,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59ac452cfa394d339aa5ee6589ac87a8",
+       "model_id": "d8b325b43291490aba21de02082320d9",
        "version_major": 2,
        "version_minor": 0
       },
