add convolution_from_stratch module

--- a/src/plot2data/notebooks_dev/custom_template_match_V2.ipynb
+++ b/src/plot2data/notebooks_dev/custom_template_match_V2.ipynb
@@ -1,102 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import cv2 as cv\n",
+    "import numpy_indexed as npi\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "from ipywidgets import interact, widgets\n",
+    "from plotly.express import imshow as imshow_interactive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from collections import defaultdict\n",
-    "import cv2 as cv\n",
-    "# from scipy.ndimage.filters import sobel\n",
-    "from scipy.ndimage import sobel\n",
-    "\n",
     "import pathlib\n",
+    "from typing import List, Tuple\n",
+    "import numpy as np\n",
+    "import cv2 as cv\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "from ipywidgets import interact, widgets\n",
-    "from plotly.express import imshow as imshow_interactive\n",
-    "from tqdm.notebook import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy_indexed as npi\n",
-    "from lsnms import nms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from template_match import read_image_rgb, read_image_gray, template_match, detect_points, find_tolerance_limit, simplify_points, agglomerative_clustering, meanshift_clustering, invert_convolution_map, point_to_bbox, \\\n",
-    "    replace_black_pixels, get_bbox_from_point, get_bbox_center\n",
     "\n",
-    "from process_template import template_tresholding, reconstruct_template_mask, crop_image\n",
-    "\n",
-    "from hough_transform import calc_gradients, build_hough_model, fill_accumulator, \\\n",
-    "    normalize_map, get_first_N_maximums\n",
-    "\n",
-    "from utils import remove_nan_inf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def draw_image(image: np.ndarray) -> None:\n",
-    "    plt.imshow(cv.cvtColor(image, cv.COLOR_BGR2RGB))\n",
-    "\n",
-    "\n",
-    "def draw_points_on_canvas(points: np.ndarray, image: np.ndarray) -> None:\n",
-    "    x = points[:, 0]\n",
-    "    y = points[:, 1]\n",
-    "    \n",
-    "    clear_canvas = image.copy()\n",
-    "    clear_canvas[:, :] = 255\n",
-    "    plt.scatter(x, y, alpha=0.5, s=5)\n",
-    "    plt.imshow(cv.cvtColor(clear_canvas, cv.COLOR_BGR2RGB))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from matplotlib.patches import Rectangle\n",
-    "\n",
-    "def draw_bbox(x_min, x_max, y_min, y_max, bbox_center=None, color='r') -> None:\n",
-    "    height = y_max - y_min\n",
-    "    width = x_max - x_min\n",
-    "    rect = Rectangle((x_min, y_min), width, height, edgecolor=color, facecolor='none')\n",
-    "    ax = plt.gca()\n",
-    "    ax.add_patch(rect)\n",
-    "\n",
-    "    if bbox_center:\n",
-    "        bbox_center_x, bbox_center_y = bbox_center\n",
-    "        plt.scatter([bbox_center_x], [bbox_center_y], marker=\"*\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BASE_DIR = pathlib.Path(__name__).resolve().parent.parent\n",
+    "BASE_DIR = pathlib.Path(__name__).resolve().parent.parent.parent.parent\n",
     "load_dotenv(BASE_DIR / '.env')\n",
     "DATA_PATH = pathlib.Path(os.getenv(\"DATA_PATH\"))"
    ]
@@ -105,107 +54,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convolution implementation"
+    "## Import core modules"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_image_part(y: int, x: int, image: np.ndarray, w: int, h: int):\n",
-    "    return image[y : y+h, x : x+w]\n",
+    "import sys\n",
+    "import pathlib\n",
+    "SRC_DIR = str(pathlib.Path(__name__).resolve().parent.parent.parent)\n",
+    "sys.path.append(SRC_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plot2data.setup_logger import logger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plot2data.utils.read_image import read_image_rgb, read_image_gray\n",
+    "from plot2data.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image, \\\n",
+    "    draw_bbox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plot2data.core.template_match import template_match, detect_points, \\\n",
+    "    find_tolerance_limit, point_to_bbox\n",
     "\n",
-    "def sqdiff(image_part: np.ndarray, template: np.ndarray):\n",
-    "    sqdiff_sum = np.sum((image_part.astype(np.float64) - template.astype(np.float64))**2)\n",
-    "    return sqdiff_sum\n",
+    "from plot2data.core.clustering import simplify_points, agglomerative_clustering, meanshift_clustering\n",
     "\n",
+    "from plot2data.core.preprocess import replace_black_pixels\n",
     "\n",
-    "def compute_mask_pixel_ratio(image_part: np.ndarray, template_mask: np.ndarray, image_mask_value: float):\n",
-    "    \n",
-    "    image_mask_indexes = np.where((image_part[:, :, 0] == image_mask_value) & (image_part[:, :, 1] == image_mask_value) & (image_part[:, :, 2] == image_mask_value))\n",
-    "    template_non_mask_indexes = np.where(template_mask != 0)\n",
-    "\n",
-    "    x, y = image_mask_indexes\n",
-    "    image_part_mask_pixel_coords = np.stack((x, y)).T\n",
-    "\n",
-    "    x1, y1 = template_non_mask_indexes\n",
-    "    template_non_mask_pixel_coords = np.stack((x1, y1)).T\n",
-    "\n",
-    "    true_mask_pixel_coords = npi.intersection(\n",
-    "        image_part_mask_pixel_coords,\n",
-    "        template_non_mask_pixel_coords\n",
-    "    )\n",
-    "\n",
-    "    mask_pixel_ratio = len(true_mask_pixel_coords) / len(template_non_mask_pixel_coords)\n",
-    "    \n",
-    "    return mask_pixel_ratio\n",
-    "\n",
-    "\n",
-    "def compute_mask_pixel_ratio_v2(\n",
-    "    image_mask_part_binary: np.ndarray,\n",
-    "    template_mask_binary: np.ndarray,\n",
-    "    template_non_mask_pixels_count: int\n",
-    ") -> float:\n",
-    "    \"\"\"\n",
-    "    Return count of non mask pixels of \n",
-    "    \"\"\"\n",
-    "    return np.sum(image_mask_part_binary * template_mask_binary) / template_non_mask_pixels_count\n",
-    "\n",
-    "\n",
-    "\n",
-    "def sqdiff_normed_modification(\n",
-    "    image_part: np.ndarray,\n",
-    "    template: np.ndarray, \n",
-    "    template_mask_rgb: np.ndarray,\n",
-    "    image_mask_part_binary: np.ndarray,\n",
-    "    template_mask_binary: np.ndarray,\n",
-    "    template_non_mask_pixels_count: int,\n",
-    "    ratio_treshold: float = 0.5\n",
-    ") -> float:\n",
-    "    \"\"\"\n",
-    "    SQDIFF_NORMED modification\n",
-    "    \"\"\"\n",
-    "    mask_pixel_ratio = compute_mask_pixel_ratio_v2(\n",
-    "        image_mask_part_binary, \n",
-    "        template_mask_binary,\n",
-    "        template_non_mask_pixels_count\n",
-    "    )\n",
-    "    if mask_pixel_ratio < ratio_treshold:\n",
-    "        return np.nan\n",
-    "\n",
-    "    sqdiff = np.sum( ((template - image_part) * template_mask_rgb)**2 )\n",
-    "    norm1 = np.sum( (template * template_mask_rgb)**2 )\n",
-    "    norm2 = np.sum( (image_part * template_mask_rgb)**2 )\n",
-    "\n",
-    "    sqdiff_normed = sqdiff / np.sqrt(norm1 * norm2)\n",
-    "\n",
-    "    return sqdiff_normed\n",
+    "from plot2data.core.conv_map_operations import invert_convolution_map, normalize_map, \\\n",
+    "    get_first_N_maximums, remove_nan_inf\n",
     "\n",
     "\n",
-    "def sqdiff_normed(image_part: np.ndarray, template: np.ndarray, template_mask: np.ndarray) -> float:\n",
-    "    \"\"\"\n",
-    "    OpenCV SQDIFF_NORMED implementation\n",
-    "    \"\"\"\n",
-    "    # image_part = image_part.astype(np.float64)\n",
-    "    # template = template.astype(np.float64)\n",
-    "    # mask = mask.astype(np.float64)\n",
+    "from plot2data.core.process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
+    "    crop_image, frame_image, is_grayscale, reconstruct_template_mask\n",
     "\n",
-    "    sqdiff = np.sum( ((template - image_part) * template_mask)**2 )\n",
-    "    norm1 = np.sum( (template * template_mask)**2 )\n",
-    "    norm2 = np.sum( (image_part * template_mask)**2 )\n",
-    "\n",
-    "    sqdiff_normed = sqdiff / np.sqrt(norm1 * norm2)\n",
-    "\n",
-    "    return sqdiff_normed\n",
-    "\n",
-    "\n",
-    "\n",
-    "def cv_sqdiff_normed(image_part: np.ndarray, template: np.ndarray, mask: np.ndarray):\n",
-    "\n",
-    "    sqdiff = cv.matchTemplate(image_part, template, cv.TM_SQDIFF_NORMED, mask=mask)\n",
-    "    return sqdiff\n"
+    "from plot2data.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convolution implementation\n",
+    "from plot2data.core.convolution_from_stratch import get_image_part, sqdiff, \\\n",
+    "    compute_mask_pixel_ratio, compute_mask_pixel_ratio_v2, sqdiff_normed_modification, \\\n",
+    "    sqdiff_normed, cv_sqdiff_normed"
    ]
   },
   {
@@ -217,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1885,7 +1801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
