create functions for interactive parameter search; move nms functions to appropriate module

--- a/src/plot2data/main.ipynb
+++ b/src/plot2data/main.ipynb
@@ -91,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from plot2data.core.template_match import template_match, detect_points, \\\n",
-    "    find_tolerance_limit, point_to_bbox, get_bbox_from_point, get_bbox_center\n",
+    "    find_tolerance_limit\n",
     "\n",
     "from plot2data.core.clustering import simplify_points, agglomerative_clustering, meanshift_clustering\n",
     "\n",
@@ -109,7 +109,11 @@
     "from plot2data.core.process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
     "    crop_image, frame_image, is_grayscale, reconstruct_template_mask\n",
     "\n",
-    "from plot2data.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator"
+    "from plot2data.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator\n",
+    "\n",
+    "from plot2data.core.parameters_search import linear_parameter_transform, get_corr_map_maximums\n",
+    "\n",
+    "from plot2data.core.nms import apply_nms, point_to_bbox, get_bbox_from_point, get_bbox_center"
    ]
   },
   {
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +188,7 @@
        "(898, 1755)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +211,7 @@
        "([], [])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -278,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +291,7 @@
        "([], [])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -326,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,15 +433,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from lsnms import nms"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -459,22 +454,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c026280ccc048b5b435f26ef8f53ebc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=20.0, description='points_num', step=0.001), FloatSlider(value=20.0, d…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "@interact(points_num=widgets.FloatSlider(value=20, min=0, max=100, step=1),\n",
@@ -483,33 +463,40 @@
     "    \n",
     "\n",
     "    CORR_MAP = convolution_map3\n",
-    "\n",
     "    \n",
-    "    # transform parameters 1\n",
-    "    corr_map_treshold = -0.01 * points_num + 1\n",
-    "    # corr_map_treshold = np.round(corr_map_treshold, decimals=3)\n",
-    "    print(points_num, corr_map_treshold)\n",
+    "    ## transform parameters:\n",
+    "    corr_map_treshold = linear_parameter_transform(points_num, a=-0.01, b=1)\n",
+    "    iou_treshold = linear_parameter_transform(points_density, a=-0.01, b=1)\n",
     "\n",
-    "    # transform parameters 2\n",
-    "    iou_treshold = -0.01 * points_density + 1\n",
-    "    # iou_treshold = np.round(iou_treshold, decimals=2)\n",
-    "    print(points_density, iou_treshold)\n",
+    "    # ## get max points\n",
+    "    # maximums = np.where(CORR_MAP >= corr_map_treshold)\n",
+    "    # y_points, x_points = maximums\n",
+    "    # points = np.stack((x_points, y_points)).T\n",
+    "    # number_of_maximums = len(points)\n",
+    "\n",
+    "    max_points, number_of_maximums = get_corr_map_maximums(\n",
+    "        correlation_map=CORR_MAP,\n",
+    "        treshold=corr_map_treshold\n",
+    "    )\n",
     "    \n",
+    "    # ## NMS\n",
+    "    # bboxes, scores = get_bbox_from_point(points, w_template, h_template, CORR_MAP)\n",
+    "    # keep = nms(bboxes, scores, iou_threshold=iou_treshold)\n",
+    "    # bboxes_nms = bboxes[keep]\n",
+    "    # x_nms, y_nms = get_bbox_center(bboxes_nms)\n",
+    "    # actual_points = np.stack((x_nms, y_nms)).T\n",
     "\n",
-    "    ## get max points\n",
-    "    maximums = np.where(CORR_MAP >= corr_map_treshold)\n",
-    "    y_points, x_points = maximums\n",
-    "    points = np.stack((x_points, y_points)).T\n",
-    "    number_of_maximums = len(points)\n",
-    "    \n",
-    "    ## NMS\n",
-    "    bboxes, scores = get_bbox_from_point(points, w_template, h_template, CORR_MAP)\n",
-    "    keep = nms(bboxes, scores, iou_threshold=iou_treshold)\n",
-    "    bboxes_nms = bboxes[keep]\n",
-    "    x_nms, y_nms = get_bbox_center(bboxes_nms)\n",
-    "    actual_points = np.stack((x_nms, y_nms)).T\n",
+    "    actual_points = apply_nms(\n",
+    "        points=max_points,\n",
+    "        correlation_map=CORR_MAP,\n",
+    "        iou_treshold=iou_treshold,\n",
+    "        bbox_width=w_template,\n",
+    "        bbox_height=h_template\n",
+    "    )\n",
+    "    x_nms = actual_points[:, 0]\n",
+    "    y_nms = actual_points[:, 1]\n",
     "\n",
-    "    ## nms: founded points on original image\n",
+    "    ## draw founded points on original image\n",
     "    plt.figure(figsize=(9, 9))\n",
     "    draw_image(source_image)\n",
     "    plt.scatter(x_nms, y_nms, s=60, c=\"yellow\", marker=\"*\",  edgecolors='black', linewidths=0.2)\n",
@@ -517,7 +504,7 @@
     "    plt.title(f\"{corr_map_treshold=}, {iou_treshold=}, {number_of_maximums=}\")\n",
     "    plt.show()\n",
     "\n",
-    "    # ## founded points on clear canvas\n",
+    "    # ## draw founded points on clear canvas\n",
     "    # plt.figure(figsize=(10, 6))\n",
     "    # draw_points_on_canvas(actual_points, source_image)"
    ]
@@ -528,51 +515,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# (old)\n",
-    "\n",
-    "\n",
-    "@interact(maximums_treshold=widgets.FloatSlider(value=-800, min=-1000, max=-1, step=-1),\n",
-    "          iou_treshold=widgets.FloatSlider(value=-0.8, min=-1, max=-0.01, step=-0.01))\n",
-    "def visualize(maximums_treshold, iou_treshold):\n",
-    "    \n",
-    "\n",
-    "    CORR_MAP = convolution_map3\n",
-    "    iou_treshold *= -1\n",
-    "    maximums_treshold *= -0.001\n",
-    "    maximums_treshold = np.round(maximums_treshold, decimals=3)\n",
-    "\n",
-    "    ## get max points\n",
-    "    maximums = np.where(CORR_MAP >= maximums_treshold)\n",
-    "    y_points, x_points = maximums\n",
-    "    points = np.stack((x_points, y_points)).T\n",
-    "    number_of_maximums = len(points)\n",
-    "    \n",
-    "    ## NMS\n",
-    "    bboxes, scores = get_bbox_from_point(points, w_template, h_template, CORR_MAP)\n",
-    "    keep = nms(bboxes, scores, iou_threshold=iou_treshold)\n",
-    "    bboxes_nms = bboxes[keep]\n",
-    "    x_nms, y_nms = get_bbox_center(bboxes_nms)\n",
-    "    actual_points = np.stack((x_nms, y_nms)).T\n",
-    "\n",
-    "    ## nms: founded points on original image\n",
-    "    plt.figure(figsize=(9, 9))\n",
-    "    draw_image(source_image)\n",
-    "    plt.scatter(x_nms, y_nms, s=60, c=\"yellow\", marker=\"*\",  edgecolors='black', linewidths=0.2)\n",
-    "    # plt.xticks([]); plt.yticks([]);\n",
-    "    plt.title(f\"{maximums_treshold=}, {iou_treshold=}, {number_of_maximums=}\")\n",
-    "    plt.show()\n",
-    "\n",
-    "    ## founded points on clear canvas\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    draw_points_on_canvas(actual_points, source_image)"
-   ]
   }
  ],
  "metadata": {
