add new package name to imports

--- a/src/scanplot/main.ipynb
+++ b/src/scanplot/main.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plot2data.setup_logger import logger"
+    "from scanplot.setup_logger import logger"
    ]
   },
   {
@@ -84,8 +84,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plot2data.utils.read_image import read_image_rgb, read_image_gray\n",
-    "from plot2data.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image, \\\n",
+    "from scanplot.utils.read_image import read_image_rgb, read_image_gray\n",
+    "from scanplot.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image, \\\n",
     "    draw_bbox"
    ]
   },
@@ -95,25 +95,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plot2data.core.template_match import template_match, detect_points, \\\n",
+    "from scanplot.core.template_match import template_match, detect_points, \\\n",
     "    find_tolerance_limit\n",
     "\n",
-    "from plot2data.core.clustering import simplify_points, agglomerative_clustering, meanshift_clustering\n",
+    "from scanplot.core.clustering import simplify_points, agglomerative_clustering, meanshift_clustering\n",
     "\n",
-    "from plot2data.core.preprocess import replace_black_pixels\n",
+    "from scanplot.core.preprocess import replace_black_pixels\n",
     "\n",
-    "from plot2data.core.conv_map_operations import invert_convolution_map, normalize_map, \\\n",
+    "from scanplot.core.conv_map_operations import invert_convolution_map, normalize_map, \\\n",
     "    get_first_N_maximums, remove_nan_inf\n",
     "\n",
     "\n",
-    "from plot2data.core.process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
+    "from scanplot.core.process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
     "    crop_image, frame_image, is_grayscale, reconstruct_template_mask\n",
     "\n",
-    "from plot2data.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator\n",
+    "from scanplot.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator\n",
     "\n",
-    "from plot2data.core.parameters_search import linear_parameter_transform, get_corr_map_maximums\n",
+    "from scanplot.core.parameters_search import linear_parameter_transform, get_corr_map_maximums\n",
     "\n",
-    "from plot2data.core.nms import apply_nms, point_to_bbox, get_bbox_from_point, get_bbox_center"
+    "from scanplot.core.nms import apply_nms, point_to_bbox, get_bbox_from_point, get_bbox_center"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "# convolution implementation\n",
-    "from plot2data.core.convolution_from_stratch import get_image_part, sqdiff, \\\n",
+    "from scanplot.core.convolution_from_stratch import get_image_part, sqdiff, \\\n",
     "    compute_mask_pixel_ratio, compute_mask_pixel_ratio_v2, sqdiff_normed_modification, \\\n",
     "    sqdiff_normed, cv_sqdiff_normed"
    ]
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,28 +464,17 @@
     "\n",
     "    CORR_MAP = convolution_map3\n",
     "    \n",
-    "    ## transform parameters:\n",
+    "    ## transform parameters\n",
     "    corr_map_treshold = linear_parameter_transform(points_num, a=-0.01, b=1)\n",
     "    iou_treshold = linear_parameter_transform(points_density, a=-0.01, b=1)\n",
     "\n",
-    "    # ## get max points\n",
-    "    # maximums = np.where(CORR_MAP >= corr_map_treshold)\n",
-    "    # y_points, x_points = maximums\n",
-    "    # points = np.stack((x_points, y_points)).T\n",
-    "    # number_of_maximums = len(points)\n",
-    "\n",
+    "    ## get max points\n",
     "    max_points, number_of_maximums = get_corr_map_maximums(\n",
     "        correlation_map=CORR_MAP,\n",
     "        treshold=corr_map_treshold\n",
     "    )\n",
     "    \n",
-    "    # ## NMS\n",
-    "    # bboxes, scores = get_bbox_from_point(points, w_template, h_template, CORR_MAP)\n",
-    "    # keep = nms(bboxes, scores, iou_threshold=iou_treshold)\n",
-    "    # bboxes_nms = bboxes[keep]\n",
-    "    # x_nms, y_nms = get_bbox_center(bboxes_nms)\n",
-    "    # actual_points = np.stack((x_nms, y_nms)).T\n",
-    "\n",
+    "    ## NMS\n",
     "    actual_points = apply_nms(\n",
     "        points=max_points,\n",
     "        correlation_map=CORR_MAP,\n",
