--- a/src/scanplot/notebooks_dev/pipeline.ipynb
+++ b/src/scanplot/notebooks_dev/pipeline.ipynb
@@ -71,45 +71,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plot2data.setup_logger import logger"
+    "from scanplot.setup_logger import logger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plot2data.utils.read_image import read_image_rgb, read_image_gray\n",
-    "from plot2data.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image, \\\n",
+    "from scanplot.utils.read_image import read_image_rgb, read_image_gray\n",
+    "from scanplot.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image, \\\n",
     "    draw_bbox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plot2data.core.template_match import template_match, detect_points, \\\n",
+    "from scanplot.core.template_match import template_match, detect_points, \\\n",
     "    find_tolerance_limit, point_to_bbox\n",
     "\n",
-    "from plot2data.core.clustering import simplify_points, agglomerative_clustering, meanshift_clustering\n",
+    "from scanplot.core.clustering import simplify_points, agglomerative_clustering, meanshift_clustering\n",
     "\n",
-    "from plot2data.core.preprocess import replace_black_pixels\n",
+    "from scanplot.core.preprocess import replace_black_pixels\n",
     "\n",
-    "from plot2data.core.conv_map_operations import invert_convolution_map, normalize_map, \\\n",
+    "from scanplot.core.conv_map_operations import invert_convolution_map, normalize_map, \\\n",
     "    get_first_N_maximums\n",
     "\n",
     "\n",
-    "from plot2data.core.process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
+    "from scanplot.core.process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
     "    crop_image, frame_image, is_grayscale, reconstruct_template_mask\n",
     "\n",
-    "from plot2data.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator"
+    "from scanplot.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator"
    ]
   },
   {
