create high-level funcion for computing accumulator in Hough Transform

--- a/src/scanplot/pipeline.ipynb
+++ b/src/scanplot/pipeline.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
     "from scanplot.core.process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
     "    crop_image, frame_image, is_grayscale, reconstruct_template_mask\n",
     "\n",
-    "from scanplot.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator\n",
+    "from scanplot.core.hough_transform import generalized_hough_transform\n",
     "\n",
     "from scanplot.core.parameters_search import linear_parameter_transform, get_corr_map_maximums\n",
     "\n",
@@ -355,36 +355,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Hough transfrom\n",
-    "hough_model = build_hough_model(template)\n",
-    "accumulator = fill_accumulator(hough_model, source_image)\n",
-    "accumulator_normed = normalize_map(accumulator)\n",
+    "accumulator = generalized_hough_transform(image, template, norm_result=True, crop_result=True)\n",
     "\n",
-    "# (подгон) ((но работает))\n",
-    "# обрезаем аккумулятор так, чтобы его размер был равен размеру корреляционной карты\n",
-    "x_min = w_template // 2\n",
-    "y_min = h_template // 2\n",
-    "if w_template % 2 == 0:\n",
-    "    x_max = accumulator_normed.shape[1] - w_template // 2\n",
-    "else:\n",
-    "    x_max = accumulator_normed.shape[1] - w_template // 2 - 1\n",
-    "\n",
-    "if h_template % 2 == 0:\n",
-    "    y_max = accumulator_normed.shape[0] - h_template // 2\n",
-    "else:\n",
-    "    y_max = accumulator_normed.shape[0] - h_template // 2 - 1\n",
-    "\n",
-    "accumulator_cropped = crop_image(accumulator, bbox=(x_min, x_max, y_min, y_max))\n",
-    "accumulator_normed_cropped = crop_image(accumulator_normed, bbox=(x_min, x_max, y_min, y_max))\n",
-    "\n",
-    "convolution_map_normed = normalize_map(convolution_map)\n",
-    "convolution_map2_normed = normalize_map(convolution_map2)\n",
-    "\n",
-    "assert convolution_map_normed.shape == accumulator_normed_cropped.shape"
+    "assert convolution_map.shape == accumulator.shape"
    ]
   },
   {
@@ -396,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +383,8 @@
     "convolution_map3 = convolution_map + 0.7 * convolution_map2\n",
     "convolution_map3 = normalize_map(convolution_map3)\n",
     "\n",
-    "convolution_map4 = convolution_map + 0.6 * accumulator_normed_cropped"
+    "convolution_map4 = convolution_map + 0.6 * accumulator_normed_cropped\n",
+    "convolution_map4 = normalize_map(convolution_map4)"
    ]
   },
   {
