--- a/src/scanplot/main.ipynb
+++ b/src/scanplot/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.utils.read_image import read_image_rgb, read_image_gray\n",
-    "from scanplot.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image, \\\n",
-    "    draw_bbox"
+    "from scanplot.utils.read_image import read_image_rgb\n",
+    "from scanplot.utils.drawing import draw_image, draw_points_on_canvas, draw_points_on_image"
    ]
   },
   {
@@ -88,37 +87,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.core.template_match import template_match, detect_points, \\\n",
-    "    find_tolerance_limit\n",
-    "\n",
-    "from scanplot.core.clustering import simplify_points, agglomerative_clustering, meanshift_clustering\n",
-    "\n",
+    "from scanplot.core.template_match import template_match\n",
     "from scanplot.core.preprocess import replace_black_pixels\n",
-    "\n",
-    "from scanplot.core.conv_map_operations import invert_convolution_map, normalize_map, \\\n",
-    "    get_first_N_maximums, remove_nan_inf\n",
-    "\n",
-    "\n",
-    "from scanplot.core.process_template import template_tresholding, extract_largest_component, find_bbox, \\\n",
-    "    crop_image, frame_image, is_grayscale, reconstruct_template_mask\n",
-    "\n",
-    "from scanplot.core.hough_transform import calc_gradients, build_hough_model, fill_accumulator\n",
-    "\n",
+    "from scanplot.core.conv_map_operations import normalize_map\n",
+    "from scanplot.core.process_template import template_tresholding, crop_image, reconstruct_template_mask\n",
+    "from scanplot.core.hough_transform import generalized_hough_transform\n",
     "from scanplot.core.parameters_search import linear_parameter_transform, get_corr_map_maximums\n",
-    "\n",
-    "from scanplot.core.nms import apply_nms, point_to_bbox, get_bbox_from_point, get_bbox_center"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convolution implementation\n",
-    "from scanplot.core.convolution_from_stratch import get_image_part, sqdiff, \\\n",
-    "    compute_mask_pixel_ratio, compute_mask_pixel_ratio_v2, sqdiff_normed_modification, \\\n",
-    "    sqdiff_normed, cv_sqdiff_normed"
+    "from scanplot.core.nms import apply_nms"
    ]
   },
   {
@@ -137,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +156,7 @@
        "(898, 1755)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +179,7 @@
        "([], [])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -238,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +259,7 @@
        "([], [])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -323,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -355,36 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Hough transfrom\n",
-    "hough_model = build_hough_model(template)\n",
-    "accumulator = fill_accumulator(hough_model, source_image)\n",
-    "accumulator_normed = normalize_map(accumulator)\n",
+    "accumulator = generalized_hough_transform(image, template, norm_result=True, crop_result=True)\n",
     "\n",
-    "# (подгон) ((но работает))\n",
-    "# обрезаем аккумулятор так, чтобы его размер был равен размеру корреляционной карты\n",
-    "x_min = w_template // 2\n",
-    "y_min = h_template // 2\n",
-    "if w_template % 2 == 0:\n",
-    "    x_max = accumulator_normed.shape[1] - w_template // 2\n",
-    "else:\n",
-    "    x_max = accumulator_normed.shape[1] - w_template // 2 - 1\n",
-    "\n",
-    "if h_template % 2 == 0:\n",
-    "    y_max = accumulator_normed.shape[0] - h_template // 2\n",
-    "else:\n",
-    "    y_max = accumulator_normed.shape[0] - h_template // 2 - 1\n",
-    "\n",
-    "accumulator_cropped = crop_image(accumulator, bbox=(x_min, x_max, y_min, y_max))\n",
-    "accumulator_normed_cropped = crop_image(accumulator_normed, bbox=(x_min, x_max, y_min, y_max))\n",
-    "\n",
-    "convolution_map_normed = normalize_map(convolution_map)\n",
-    "convolution_map2_normed = normalize_map(convolution_map2)\n",
-    "\n",
-    "assert convolution_map_normed.shape == accumulator_normed_cropped.shape"
+    "assert convolution_map.shape == accumulator.shape"
    ]
   },
   {
@@ -396,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,16 +358,17 @@
     "convolution_map3 = convolution_map + 0.7 * convolution_map2\n",
     "convolution_map3 = normalize_map(convolution_map3)\n",
     "\n",
-    "convolution_map4 = convolution_map + 0.6 * accumulator_normed_cropped"
+    "convolution_map4 = convolution_map + 0.6 * accumulator\n",
+    "convolution_map4 = normalize_map(convolution_map4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imshow_interactive(convolution_map)"
+    "# imshow_interactive(convolution_map4)"
    ]
   },
   {
@@ -455,7 +408,7 @@
     "def visualize(points_num, points_density):\n",
     "    \n",
     "\n",
-    "    CORR_MAP = convolution_map3\n",
+    "    CORR_MAP = convolution_map4\n",
     "    \n",
     "    ## transform parameters\n",
     "    corr_map_treshold = linear_parameter_transform(points_num, a=-0.01, b=1)\n",
